# DataManagement

./: .clang-format  .gitignore  CMakeLists.txt  CSVSource_8hpp_source.html  Config.cmake.in  Config_8hpp_source.html  Configuration_8hpp.html  Configuration_8hpp__dep__incl.map  Configuration_8hpp__dep__incl.md5  Configuration_8hpp__incl.map  Configuration_8hpp__incl.md5  Configuration_8hpp_source.html  DBSource_8hpp_source.html  DataManagementConfig.cmake  DataManagementConfig.cmake.in  DataManagement_8hpp_source.html  DataManagerBase_8hpp_source.html  DataManager_8hpp_source.html  DataTable_8hpp.html  DataTable_8hpp__dep__incl.map  DataTable_8hpp__dep__incl.md5  DataTable_8hpp__incl.map  DataTable_8hpp__incl.md5  DataTable_8hpp_source.html  Dockerfile  Doxyfile  ModelData_8hpp_source.html  README.md  Reader_8hpp_source.html  SECURITY.md  SQLite3_8hpp_source.html  Writer_8hpp_source.html  annotated.html  classConfigurationTest-members.html  classConfigurationTest.html  classConfigurationTest__coll__graph.map  classConfigurationTest__coll__graph.md5  classConfigurationTest__inherit__graph.map  classConfigurationTest__inherit__graph.md5  classDataTableTest-members.html  (+170 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_release.yml  clang_formatting.yml  cmake-single-platform.yml  deploy-docs.yml  unit_testing.yml
_install/include/: Reader.hpp  SQLite3.hpp  Writer.hpp
_install/include/DataManagement/: export.h
_install/lib/: libDataManagement.so.1  libDataManagement.so.1.0.0
_install/lib/cmake/DataManagement/: DataManagement-shared-targets-release.cmake  DataManagement-shared-targets.cmake
cmake/: BuildBinaries.cmake  InstallDatamanagement.cmake  LoadBoost.cmake  LoadEigen.cmake  LoadGlaze.cmake  LoadSpdlog.cmake  LoadSqlite.cmake  MakeDependenciesAvailable.cmake  datamanagement.pc.in  datamanagementCPack.cmake  datamanagementConfig.cmake.in  options.cmake  utils.cmake
include/: Configuration.hpp  DataManagement.hpp  DataManager.hpp  DataManagerBase.hpp  DataTable.hpp  Reader.hpp  SQLite3.hpp
include/datamanagement/: Configuration.hpp  DataManagement.hpp  DataTable.hpp  Reader.hpp  Writer.hpp  datamanagement.hpp  version.hpp
include/datamanagement/configuration/: Config.hpp
include/datamanagement/dataset/: CSVDataset.hpp  DBDataset.hpp  Dataset.hpp
include/datamanagement/datasource/: CSVDataSource.hpp  DBDataSource.hpp  DataSource.hpp
include/datamanagement/modeldata/: ModelData.hpp  model_data.hpp
include/datamanagement/source/: CSVSource.hpp  Config.hpp  DBSource.hpp  TableSource.hpp  config.hpp  csv_source.hpp  db_source.hpp
include/datamanagement/utils/: Utils.hpp  csv.hpp
lib/boost/lib/cmake/boost_filesystem-1.82.0/: boost_filesystem-config.cmake
libs/lib/cmake/boost_atomic-1.82.0/: boost_atomic-config.cmake
libs/lib/cmake/boost_headers-1.82.0/: boost_headers-config.cmake
packaging/: CMakeLists.txt  DataManagementConfig.cmake
scripts/: build.sh  uninstall.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+26 more)
src/: Config.cpp  Configuration.cpp  DataManager.cpp  DataTable.cpp  DatasetImpl.hpp  ModelDataImpl.hpp  SQLite3.cpp
test/: CMakeLists.txt  ConfigurationTest.cpp  DataTableTest.cpp
tests/: CMakeLists.txt  ConfigurationTest.cpp  DataTableTest.cpp
tests/src/: TEST_CSVSource.cpp  TEST_Config.cpp  TEST_DBDataSource.cpp  TEST_DBSource.cpp  TEST_DataManager.cpp  TEST_ModelData.cpp  test_config.cpp  test_csv_source.cpp  test_db_source.cpp  test_model_data.cpp
tools/: build.sh
