[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "DataManagement"
version = "1.0.0"
readme = "README.md"
authors = [
    { name = "Matthew Carroll", email = "Matthew.Carroll@bmc.org" },
    { name = "Dimitri Baptiste", email = "Dimitri.Baptiste@bmc.org" },
]
maintainers = [{ name = "Syndemics Lab", email = "Benjamin.Linas@bmc.org" }]
license = { text = "GNU AGPLv3" }
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/SyndemicsLab/DataManagement"
Issues = "https://github.com/SyndemicsLab/DataManagement/issues"

[tool.scikit-build]
cmake.version = ">=3.27"

[tool.scikit-build.cmake.define]
BUILD_SHARED_LIBS = "YES"
